[package]
name = "miemietron"
version = "0.1.0"
edition = "2021"
description = "High-performance proxy kernel for low-powered routers"
license = "MIT"

[features]
default = ["ss", "vless", "trojan"]
ss = []
vless = []
trojan = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TLS & Crypto
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
ring = "0.17"
sha2 = "0.10"
md-5 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
blake3 = "1"
rand = "0.8"
digest = "0.10"
webpki-roots = "0.26"
rustls-pemfile = "2"

# Web framework (API server)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1", features = ["full"] }

# WebSocket transport
tokio-tungstenite = "0.26"
futures-util = "0.3"

# HTTP client (DoH, providers, health checks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Concurrent data structures
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

# Pattern matching (rule engine)
aho-corasick = "1"

# GeoIP
maxminddb = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Misc
uuid = { version = "1", features = ["v4"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-queue = "0.3"
once_cell = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
ipnet = { version = "2", features = ["serde"] }
url = "2"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-sys = "0.8"
nix = { version = "0.29", features = ["net", "ioctl", "socket", "fs"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
