[package]
name = "miemietron"
version = "0.1.12"
edition = "2021"
description = "High-performance proxy kernel for low-powered routers"
license = "MIT"

[features]
default = ["ss", "vless", "trojan", "vmess"]
ss = []
vless = []
trojan = []
vmess = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TLS & Crypto
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
ring = "0.17"
sha2 = "0.10"
md-5 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
cfb-mode = "0.8"
chacha20 = "0.9"
aes = "0.8"
cipher = "0.4"
blake3 = "1"
rand = "0.8"
digest = "0.10"
webpki-roots = "0.26"
rustls-pemfile = "2"

# Web framework (API server)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
hyper = { version = "1", features = ["full"] }

# HTTP/2 & gRPC transport
h2 = "0.4"
http = "1"

# WebSocket transport
tokio-tungstenite = "0.26"
futures-util = "0.3"

# HTTP client (DoH, providers, health checks)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Concurrent data structures
dashmap = "6"

# Pattern matching (rule engine)
aho-corasick = "1"
regex = "1"

# GeoIP
maxminddb = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Allocator — musl's malloc fragments under crypto workloads; jemalloc matches Go.
tikv-jemallocator = "0.6"

# Misc
uuid = { version = "1", features = ["v4"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
ipnet = { version = "2", features = ["serde"] }
url = "2"

# User-space TCP/IP stack (gvisor mode)
smoltcp = { version = "0.12", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-sys = "0.8"
nix = { version = "0.29", features = ["net", "ioctl", "socket", "fs"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false  # matches Go's behavior, saves branch instructions on ARM
